[build-system]
requires = ["setuptools", "wheel", "torch"]

[project]
name = "ops"
version = "0.0.0"
description = "A package that contains significantly optimized CPU and GPU PyTorch extensions for the outer-product-scatter operation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "torch",
]

[tool.setuptools.packages.find]
where = ["ops"]
